--- a/dgfree/index.html
+++ b/dgfree/index.html
@@ -114,7 +114,29 @@
       反馈
       <img class="hover-phone" src="http://img.yunxingzh.com/8b432f5e-6814-43dc-bc33-8513d868d192.png">
     </li>
+    <li>
+      <span class="fixed-tool-contact">联系我们</span>
+      <div class="contact-box">
+        <p class="contact-box-tip">东莞无限欢迎本市单位将自己的WiFi加入东莞无限网络，填写以下信息，将有工作人员与您联系。(带<span class="col18">*</span>为必填项)</p>
+        <h3 class="contact-ques-tit"><span class="col18">*</span>您单位现在是否已有自建WiFi？</h3>
+        <p>
+          <input class="ipt-radio" id="hasWifi" type="radio" name="wifi" value="1" checked="true" /><label for="hasWifi">是，已经有自建WiFi</label>
+        </p>
+        <p>
+          <input class="ipt-radio" id="noWifi" type="radio" name="wifi" value="0" />否，还没有自建WiFi<label for="noWifi">Female</label>
+        </p>
+        <h3 class="contact-ques-tit"><span class="col18">*</span>您的单位地址是？</h3>
+        <input class="ipt-text ipt-ads" type="text" name="" placeholder="广东省东莞市" value="">
+        <h3 class="contact-ques-tit"><span class="col18">*</span>请留下您的联系方式<br/>(手机或座机)</h3>
+        <input class="ipt-text ipt-phone" type="text" name="" placeholder="13000000000" value="">
+        <button class="contact-btn g-tac" id="contact-btn">提交</button>
+        <p class="contact-way g-tac">提交后将有工作人员与您联系</p>
+        <p class="tip-text">服务器傲娇了 服务器傲娇了</p>
+      </div>
+    </li>
   </ul>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/cgi.js"></script>
   <script type="text/javascript" src="js/totop.js"></script>
 </body>
 </html>
