wxlogin app连Wifi 样式方案修改

--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -32,6 +32,7 @@
           <!--button class="btn mob-btn" type="button">开启智慧城市之旅</button-->
           <div class="input-main g-clearfix">
             <button class="btn mob-btn"><img class="btn-img-wechat" src="images/ico_wechat.png"><span class="btn-text"></span></span><span id="btn-login"></span></button>
+            <p g-tac app-text-tip>请使用官方APP连WiFi以保障网络安全</p>
             <span class="has-ques g-fr">遇到问题?</span>
           </div>
         </div>
@@ -46,8 +47,9 @@
           <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
         </div>
         <div class="input-main g-clearfix">
-          <button class="btn" id="btn"><img class="btn-img-wechat" src="images/ico_wechat.png"><span class="btn-text"></span><span id="btn-login"></span></button>
-          <span class="has-ques g-fr">遇到问题?</span>
+          <button class="btn top16" id="btn"><img class="btn-img-wechat" src="images/ico_wechat.png"><span class="btn-text"></span><span id="btn-login"></span></button>
+          <p class="g-tac app-text-tip">请使用官方APP连WiFi以保障网络安全</p>
+          <p class="has-ques g-tar">遇到问题?</p>
         </div>
       </div>
     </script>
