dgfree 联系我们  改成 加入我们

--- a/dgfree/index.html
+++ b/dgfree/index.html
@@ -115,7 +115,7 @@
       <img class="hover-phone" src="http://img.yunxingzh.com/8b432f5e-6814-43dc-bc33-8513d868d192.png">
     </li>
     <li>
-      <span class="fixed-tool-contact">联系我们</span>
+      <span class="fixed-tool-contact">加入我们</span>
       <div class="contact-box">
         <p class="contact-box-tip">东莞无限欢迎本市单位将自己的WiFi加入东莞无限网络，填写以下信息，将有工作人员与您联系。(带<span class="col18">*</span>为必填项)</p>
         <h3 class="contact-ques-tit"><span class="col18">*</span>您单位现在是否已有自建WiFi？</h3>
