wxlogin 区分android ios App跳转

--- a/app/mall.html
+++ b/app/mall.html
@@ -240,22 +240,22 @@
         }
       }
     }
-    //var data = {"items":[{"id":1,"score":300,"img":"http://img.yunxingzh.com/a538c4bb-f77f-4ed6-918e-bd4d2090a066.png"},{"id":2,"score":500,"img":"http://img.yunxingzh.com/a538c4bb-f77f-4ed6-918e-bd4d2090a066.png"}],"score":10000,"sign":0}
+    var data = {"items":[{"id":1,"score":300,"img":"http://img.yunxingzh.com/a538c4bb-f77f-4ed6-918e-bd4d2090a066.png"},{"id":2,"score":500,"img":"http://img.yunxingzh.com/a538c4bb-f77f-4ed6-918e-bd4d2090a066.png"}],"score":10000,"sign":0}
     var uid = CGI.query().uid;
     var token = CGI.query().token;
     var param = {
       uid: ~~uid,
       token: token
     }
-    CGI.post('get_user_score', param, function(resp) {
+    /*CGI.post('get_user_score', param, function(resp) {
       if (resp.errno == 0) {
         var data = resp.data;
         creatHtml(data);
       } else {
         tip(resp.desc);
       }
-    })
-    //creatHtml(data);
+    })*/
+    creatHtml(data);
     function creatHtml(data) {
       var html = template('tplInfo',data);
       document.getElementById('info').innerHTML = html;
