--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -32,7 +32,7 @@
           <!--button class="btn mob-btn" type="button">开启智慧城市之旅</button-->
           <div class="input-main g-clearfix">
             <button class="btn mob-btn"><img class="btn-img-wechat" src="images/ico_wechat.png"><span class="btn-text"></span></span><span id="btn-login"></span></button>
-            <p g-tac app-text-tip>请使用官方APP连WiFi以保障网络安全</p>
+            <p class="g-tac app-text-tip">请使用官方APP连WiFi以保障网络安全</p>
             <span class="has-ques g-fr">遇到问题?</span>
           </div>
         </div>
@@ -53,47 +53,6 @@
         </div>
       </div>
     </script>
-
-
-    <!--淘宝密码登录-->
-    <!--script type="text/html" id="tplIpttaobao">
-      <div class="ipt-login">
-        <div class="login-top">
-          <img class="login-top-bg" src="{{img || 'images/img_loginbg.png'}}">
-        </div>
-        <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
-        <div class="input-main">
-          <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="name"><img src="images/loading_icon_phone.png"></label>
-            <input class="g-fr ipt-phone" id="name" type="text" placeholder="请输入手机号">
-          </div>
-          <div class="input-info g-clearfix">
-            <label class="input-img g-fl" for="code" ><img src="images/loading_icon_key.png"></label>
-            <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
-            <i class="query-code">获取验证码</i>
-          </div>
-          <!--button class="btn mob-btn" type="button">开启智慧城市之旅</button>
-          <div class="input-main g-clearfix">
-            <button class="btn mob-btn tb-btn">淘宝连WiFi</button>
-            <span class="has-ques g-fr">遇到问题?</span>
-          </div>
-        </div>
-      </div>
-    </script-->
-    
-    <!--淘宝一键登录-->
-    <!--script type="text/html" id="tplOnetaobao">
-      <div class="one-click">
-        <div class="login-top">
-          <img class="login-top-bg" src="{{img || 'images/img_bg.png'}}">
-          <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
-        </div>
-        <div class="input-main g-clearfix">
-          <button class="btn wx-btn tb-btn">淘宝连WiFi</button>
-          <span class="has-ques g-fr">遇到问题?</span>
-        </div>
-      </div>
-    </script-->
     
     <!--底部-->
     <script type="text/html" id="tplBottom">
