--- a/app/mall.html
+++ b/app/mall.html
@@ -255,7 +255,7 @@
         tip(resp.desc);
       }
     })
-    creatHtml(data);
+    //creatHtml(data);
     function creatHtml(data) {
       var html = template('tplInfo',data);
       document.getElementById('info').innerHTML = html;
