app malllist cgi 接口名错误修改

--- a/app/malllist.html
+++ b/app/malllist.html
@@ -163,7 +163,7 @@
     }
   ]}*/
   var name = CGI.query().name;
-  CGI.post('get_user_score', {name: name}, function(resp) {
+  CGI.post('get_conf', {name: name}, function(resp) {
     if (resp.errno == 0) {
       var data = resp.data;
       initUI(data);
