--- a/app/malllist.html
+++ b/app/malllist.html
@@ -163,7 +163,12 @@
     }
   ]}*/
   var name = CGI.query().name;
-  CGI.post('get_conf', {name: name}, function(resp) {
+  var param = {
+    uid: 137,
+    token: '6ba9ac5a422d4473b337d57376dd3488',
+    key: name,
+  }
+  CGI.post('get_conf', param, function(resp) {
     if (resp.errno == 0) {
       var data = resp.data;
       initUI(data);
