--- a/app/malllist.html
+++ b/app/malllist.html
@@ -38,6 +38,9 @@
     border-bottom: 0.02rem solid #e6e6e6;
     position: relative;
   }
+  .goods-list li:last-child {
+    border-bottom: 0;
+  }
   .goods-img {
     display: block;
     width: 1.08rem;
@@ -81,7 +84,7 @@
   <div class="tip-box">您的积分不够，暂时不能兑换哦</div>
   <script type="text/html" id="tplInfo">
     {{each info value index}}
-    <div class="section">
+    <div class="section" data-isuid="{{value.isUid}}">
       <a class="sec-banner" data-dst="{{value.dst}}" href="javascript:;">
         <img src="{{value.banner}}">
       </a>
@@ -90,7 +93,7 @@
         <li class="g-clearfix goods-item" data-dst="{{val.dst}}">
           <img class="g-fl goods-img" src="{{val.img}}">
           <p class="g-fl goods-title">{{val.title}}</p>
-          <div class="g-fr goods-price">￥{{(val.price/100).toFixed(2)}}</div>
+          <div class="g-fr goods-price">{{val.price}}</div>
         </li>
         {{/each}}
       </ul>
@@ -144,20 +147,28 @@
       tip(resp.desc);
     }
   })
-
+ /* var data = {"info": [{"banner": "http://img.yunxingzh.com/a026a70c-3166-4a57-bd65-e80abc8aafef.png","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1","isUid":true,"list": [{ "img": "http://img.yunxingzh.com/yrtEmkNTUrh4ZdrurNAT5PMTXXdnueKk.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D461", "title": "风味手撕牛肉干", "price": "￥59.90"},{"img": "http://img.yunxingzh.com/m4I3q3znnZ73r9Zu4478N77qI79J76.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D458", "title": "水果芦荟冻饮（3杯）", "price": "￥34.90"}]},{"banner": "http://img.yunxingzh.com/1cf8a683-f1f5-4861-bde7-45650b19b1a9.png","dst": "http://m.vmall.com/#cid=10000080&wi=mid:135,fid:131,cid:10000080","isUid":false,"list": [{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170907152709803.png","dst": "https://msale.vmall.com/v9play.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "荣耀V9 play","price": "￥999起"},{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170904212837127.png","dst": "https://m.vmall.com/product/87443107.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "华为畅享7","price": "￥899起"}]}]}
+ initUI(data);*/ 
   function initUI(data) {
     var params = '&uid='+uid +'&token='+token
     $('#info').append(template('tplInfo',data));
-    $('.sec-banner').click(function() {
-      var dst = $(this).data('dst');
-      location.href = dst + params;
-    })
-    $('.goods-item').click(function() {
-      var dst = $(this).data('dst');
-      location.href = dst + params;
-    })
+    makeLink('.sec-banner',params)
+    makeLink('.goods-item',params)
   }
 
+  function makeLink(item,params) {
+    $(item).click(function() {
+      var dst = $(this).data('dst');
+      var isUid = $(this).parents('.sction').data('isuid');
+      if (isUid) {
+        location.href = dst;
+        console.log(dst);
+      } else {
+        location.href = dst + params;
+        console.log(dst + params);
+      }
+    })
+  }
     function tip(val) {
       $('.tip-box').text(val);
       $('.tip-box').addClass('block');
