--- a/app/malllist.html
+++ b/app/malllist.html
@@ -33,10 +33,22 @@
   }
   .goods-list li {
     width: 100%;
-    height: auto;
+    height: 1.6rem;
     padding:  0.18rem 0;
-    border-bottom: 0.02rem solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
     position: relative;
+  }
+  .item-inner {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
   }
   .goods-list li:last-child {
     border-bottom: 0;
@@ -45,7 +57,14 @@
     display: block;
     width: 1.08rem;
     height: auto;
+    max-height: 1.08rem;
     margin-right: 0.32rem;
+    overflow: hidden;
+  }
+  .goods-img img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
   .goods-title {
     font-size: 0.34rem;
@@ -57,7 +76,7 @@
     color: #ff543c;
     position: absolute;
     right: 0;
-    bottom: 0.43rem;
+    bottom: 0;
   }
   .tip-box {
     display: none;
@@ -90,10 +109,14 @@
       </a>
       <ul class="goods-list">
         {{each value.list val idx}}
-        <li class="g-clearfix goods-item" data-dst="{{val.dst}}">
-          <img class="g-fl goods-img" src="{{val.img}}">
-          <p class="g-fl goods-title">{{val.title}}</p>
-          <div class="g-fr goods-price">{{val.price}}</div>
+        <li class="goods-item" data-dst="{{val.dst}}">
+          <div class="g-clearfix item-inner">
+            <span class="g-fl goods-img">
+              <img src="{{val.img}}">
+            </span>
+            <p class="g-fl goods-title">{{val.title}}</p>
+            <div class="g-fr goods-price">{{val.price}}</div>
+          </div>
         </li>
         {{/each}}
       </ul>
@@ -147,9 +170,9 @@
       tip(resp.desc);
     }
   })
- /* var data = {"info": [{"banner": "http://img.yunxingzh.com/a026a70c-3166-4a57-bd65-e80abc8aafef.png","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1","isUid":true,"list": [{ "img": "http://img.yunxingzh.com/yrtEmkNTUrh4ZdrurNAT5PMTXXdnueKk.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D461", "title": "风味手撕牛肉干", "price": "￥59.90"},{"img": "http://img.yunxingzh.com/m4I3q3znnZ73r9Zu4478N77qI79J76.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D458", "title": "水果芦荟冻饮（3杯）", "price": "￥34.90"}]},{"banner": "http://img.yunxingzh.com/1cf8a683-f1f5-4861-bde7-45650b19b1a9.png","dst": "http://m.vmall.com/#cid=10000080&wi=mid:135,fid:131,cid:10000080","isUid":false,"list": [{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170907152709803.png","dst": "https://msale.vmall.com/v9play.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "荣耀V9 play","price": "￥999起"},{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170904212837127.png","dst": "https://m.vmall.com/product/87443107.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "华为畅享7","price": "￥899起"}]}]}
- initUI(data);*/ 
-  function initUI(data) {
+  /*var data = {"info": [{"banner": "http://img.yunxingzh.com/a026a70c-3166-4a57-bd65-e80abc8aafef.png","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1","isUid":true,"list": [{ "img": "http://img.yunxingzh.com/yrtEmkNTUrh4ZdrurNAT5PMTXXdnueKk.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D461", "title": "风味手撕牛肉干", "price": "￥59.90"},{"img": "http://img.yunxingzh.com/m4I3q3znnZ73r9Zu4478N77qI79J76.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D458", "title": "水果芦荟冻饮（3杯）", "price": "￥34.90"}]},{"banner": "http://img.yunxingzh.com/1cf8a683-f1f5-4861-bde7-45650b19b1a9.png","dst": "http://m.vmall.com/#cid=10000080&wi=mid:135,fid:131,cid:10000080","isUid":false,"list": [{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170907152709803.png","dst": "https://msale.vmall.com/v9play.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "荣耀V9 play","price": "￥999起"},{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170904212837127.png","dst": "https://m.vmall.com/product/87443107.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "华为畅享7","price": "￥899起"}]}]}
+ initUI(data); 
+*/  function initUI(data) {
     var params = '&uid='+uid +'&token='+token
     $('#info').append(template('tplInfo',data));
     makeLink('.sec-banner',params)
