--- a/app/malllist.html
+++ b/app/malllist.html
@@ -94,6 +94,25 @@
     border-radius: 5px;
     text-align: center;
   }
+  #info {
+    display: none;
+  }
+  .img-load {
+    width: 30%;
+    height: auto;
+    position: absolute;
+    top:  50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+  }
+  .img-load img {
+    width: 80%;
+    height: auto
+  }
+  .img-load p {
+    font-size: 14px;
+  }
   </style>
 </head>
 <body>
@@ -101,6 +120,10 @@
     
   </div>
   <div class="tip-box">您的积分不够，暂时不能兑换哦</div>
+  <div  class="img-load g-tac" >
+      <img src="images/refresh.gif" alt="">
+      <p class="g-tac">加载中。。。</p>
+  </div>
   <script type="text/html" id="tplInfo">
     {{each info value index}}
     <div class="section" data-isuid="{{value.isUid}}">
@@ -126,6 +149,7 @@
   <script type="text/javascript" src="js/zepto.min.js"></script>
   <script type="text/javascript" src="js/template-web.js"></script>
   <script type="text/javascript" src="js/cgi.js"></script>
+  <script type="text/javascript" src="js/imgload.js"></script>  
   <script type="text/javascript">
     font(true);
     function font(bFont) {
@@ -171,12 +195,17 @@
     }
   })
   /*var data = {"info": [{"banner": "http://img.yunxingzh.com/a026a70c-3166-4a57-bd65-e80abc8aafef.png","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1","isUid":true,"list": [{ "img": "http://img.yunxingzh.com/yrtEmkNTUrh4ZdrurNAT5PMTXXdnueKk.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D461", "title": "风味手撕牛肉干", "price": "￥59.90"},{"img": "http://img.yunxingzh.com/m4I3q3znnZ73r9Zu4478N77qI79J76.jpg","dst": "dgfree://http/www.yunxingzh.com/redirect_shop?callback=1&params=%26r%3Dgoods.detail%26id%3D458", "title": "水果芦荟冻饮（3杯）", "price": "￥34.90"}]},{"banner": "http://img.yunxingzh.com/1cf8a683-f1f5-4861-bde7-45650b19b1a9.png","dst": "http://m.vmall.com/#cid=10000080&wi=mid:135,fid:131,cid:10000080","isUid":false,"list": [{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170907152709803.png","dst": "https://msale.vmall.com/v9play.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "荣耀V9 play","price": "￥999起"},{"img": "https://res.vmallres.com/pimages//sale/2017-09/20170904212837127.png","dst": "https://m.vmall.com/product/87443107.html#cid=10000080&wi=mid:135,fid:131,cid:10000080","title": "华为畅享7","price": "￥899起"}]}]}
- initUI(data); 
-*/  function initUI(data) {
+ initUI(data); */
+  function initUI(data) {
     var params = '&uid='+uid +'&token='+token
     $('#info').append(template('tplInfo',data));
-    makeLink('.sec-banner',params)
-    makeLink('.goods-item',params)
+    var length = data.info.length
+    imgReady(data.info[length-1].banner, function () {
+      $('.img-load').css('display','none');
+      $('#info').css('display','block');
+      makeLink('.sec-banner',params)
+      makeLink('.goods-item',params)
+    });
   }
 
   function makeLink(item,params) {
@@ -192,19 +221,14 @@
       }
     })
   }
-    function tip(val) {
-      $('.tip-box').text(val);
-      $('.tip-box').addClass('block');
-      setTimeout(function() {
-        $('.tip-box').removeClass('block');
-      },1500)
-    }
-    //点击开始，按钮变色 ，idx赋值
-    function bindTouchstart(item) {
-      $(item).bind('touchstart',function() {
-        $(this).find('.vocher-btn').addClass('active-btn');
-      })
-    }
+  function tip(val) {
+    $('.tip-box').text(val);
+    $('.tip-box').addClass('block');
+    setTimeout(function() {
+      $('.tip-box').removeClass('block');
+    },1500)
+  }
+  
  </script>
 </body>
 
