--- a/app/malllist.html
+++ b/app/malllist.html
@@ -67,8 +67,8 @@
     height: auto;
   }
   .goods-title {
-    font-size: 0.32rem;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: 600;
     color: #5a5a5a;
     max-width: 4rem;
   }
